Trying to fix issue running in server